# talk-llama-fast-linux

./: CMakeLists.txt  README.md  README_orig.md  search_server.py  whisper.cpp
env/: pyvenv.cfg
examples/: CMakeLists.txt  common-ggml.cpp  common-ggml.h  common.cpp  common.h  console.cpp  console.h
examples/lsp/: CMakeLists.txt
examples/main/: main.cpp
examples/server/: CMakeLists.txt
examples/talk-llama/: CMakeLists.txt  llama.cpp  llama.h  talk-llama.cpp  unicode.h
xtts/: text_to_stream.py  xtts_streaming.bat
~/.vim/undo/: %home%purpledev%talk-llama-fast%CMakeLists.txt  %home%purpledev%talk-llama-fast%README.md  %home%purpledev%talk-llama-fast%examples%common-ggml.cpp  %home%purpledev%talk-llama-fast%examples%common.cpp  %home%purpledev%talk-llama-fast%examples%common.h  %home%purpledev%talk-llama-fast%examples%lsp%CMakeLists.txt  %home%purpledev%talk-llama-fast%examples%main%main.cpp  %home%purpledev%talk-llama-fast%examples%server%CMakeLists.txt  %home%purpledev%talk-llama-fast%examples%talk-llama%llama.cpp  %home%purpledev%talk-llama-fast%examples%talk-llama%talk-llama.cpp  %home%purpledev%talk-llama-fast%whisper.cpp
